# nominal-client-test

./: .gitignore  README.md  docker-compose.yml
sample-files/single-file-example/: fsae_single_session_schema.json
scripts/: clean_data.sh  clean_docker_images.sh  loki_delete.sh  loki_delete_cancel_all.sh  loki_delete_status.sh
services/exporter-loki/: Dockerfile  pyproject.toml
services/exporter-loki/src/loki_exporter/: __init__.py  config.py  file_watcher.py  loki_client.py  main.py
services/parser/: Dockerfile  pyproject.toml
services/parser/src/fsae_parser/: file_lifecycle.py  file_watcher.py  main.py  models.py  output_writers.py
services/parser/src/fsae_parser/normalizers/: __init__.py  base.py  telemetry_normalizer.py
services/parser/src/fsae_parser/parsers/: __init__.py  fsae_binary_parser.py
services/web/: Dockerfile  pyproject.toml
services/web/src/fsae_telemetry_web/: __init__.py  main.py
