[project]
name = "fsae-telemetry-web"
version = "0.1.0"
description = "FastAPI web service for uploading and viewing Formula SAE telemetry files."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fsae_telemetry_web"]